tests/paczka1/small_fuzzy/87132094.err
Error in line 2: 9HxeyIP S457 19,3
Error in line 1: S861 A888 49,1
Error in line 4: WI5yP S861 7,7
